--- a/.github/workflows/docker.yml
+++ b/.github/workflows/docker.yml
@@ -1,35 +1,43 @@
-name: Publish multi arch Docker image
+name: Publish MyFoil Docker image
 
 on:
   workflow_dispatch:
   push:
     branches:
-      - '**'
+      - 'master'
+      - 'main'
     tags:
       - '*.*.*'
 
 jobs:
-  push_to_registry:
-    name: Push Docker image to Docker Hub
-    if: startsWith(github.ref, 'refs/tags/') || (!startsWith(github.ref, 'refs/heads/dependabot') && !startsWith(github.event.head_commit.message, 'ci') && !startsWith(github.event.head_commit.message, 'doc'))
+  push_to_registries:
+    name: Push Docker image to Registries
+    if: (!startsWith(github.event.head_commit.message, 'ci') && !startsWith(github.event.head_commit.message, 'doc'))
     runs-on: ubuntu-latest
+    permissions:
+      contents: read
+      packages: write
     steps:
-      # Get the repository's code
       - name: Checkout
         uses: actions/checkout@v5
-        # with:
-        #   submodules: recursive
 
-      # https://github.com/docker/setup-qemu-action
       - name: Set up QEMU
         uses: docker/setup-qemu-action@v3
 
-      # https://github.com/docker/setup-buildx-action
       - name: Set up Docker Buildx
         id: buildx
         uses: docker/setup-buildx-action@v3
 
+      - name: Log in to GitHub Container Registry
+        uses: docker/login-action@v3
+        with:
+          registry: ghcr.io
+          username: ${{ github.actor }}
+          password: ${{ secrets.GITHUB_TOKEN }}
+
       - name: Log in to Docker Hub
+        # Only login if secrets are set
+        if: "${{ secrets.DOCKER_USERNAME != '' }}"
         uses: docker/login-action@v3
         with:
           username: ${{ secrets.DOCKER_USERNAME }}
@@ -39,30 +47,23 @@ jobs:
         id: meta
         uses: docker/metadata-action@v5
         with:
-          images: a1ex4/ownfoil
+          images: |
+            ghcr.io/${{ github.repository }}
           flavor: |
             latest=auto
           tags: |
             type=ref,event=tag
-            type=raw,value=latest,enable=${{ startsWith(github.ref, 'refs/tags/') }}
-            type=ref,event=branch,enable=${{ github.ref != 'refs/heads/master' }}
+            type=raw,value=latest,enable=${{ github.ref == 'refs/heads/master' || github.ref == 'refs/heads/main' }}
+            type=ref,event=branch,enable=${{ github.ref != 'refs/heads/master' && github.ref != 'refs/heads/main' }}
             type=semver,pattern={{version}}
-            type=semver,pattern={{major}}.{{minor}}
-            type=semver,pattern={{major}}
-
-      - name: Set platforms based on branch or tag
-        run: |
-          if [[ "${GITHUB_REF}" == "refs/heads/master" || "${GITHUB_REF}" == refs/tags/* ]]; then
-            echo "PLATFORMS=linux/amd64,linux/arm64,linux/arm/v7,linux/arm/v6" >> $GITHUB_ENV
-          else
-            echo "PLATFORMS=linux/amd64,linux/arm64" >> $GITHUB_ENV
-          fi
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v6
         with:
           context: .
-          platforms: ${{ env.PLATFORMS }}
+          platforms: linux/amd64,linux/arm64
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
+          cache-from: type=gha
+          cache-to: type=gha,mode=max
