--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,12 @@
-croniter==6.0.0
-flask==3.1.2
-Flask-Login==0.6.3
-Flask-Migrate==4.1.0
-flask-sqlalchemy==3.1.1
-nstools==1.2.3
-PyYAML==6.0.2
-requests==2.32.5
-watchdog==6.0.0
-Werkzeug==3.1.3
-zstandard==0.24.0
-unzip-http==0.1.2
+croniter
+flask
+Flask-Login
+Flask-Migrate
+flask-sqlalchemy
+nstools
+PyYAML
+requests
+watchdog
+Werkzeug
+zstandard
+unzip-http
