Renamed Ownfoil to MyFoil and added build version

--- a/chart/Chart.yaml
+++ b/chart/Chart.yaml
@@ -1,8 +1,8 @@
 apiVersion: v2
 appVersion: "1.0.0"
-description: ownfoil
-name: ownfoil
+description: MyFoil
+name: myfoil
 version: 0.1.0
-source: https://github.com/a1ex4/ownfoil
+source: https://github.com/fernandodimas/MyFoil
 
 
