--- a/chart/values.yaml
+++ b/chart/values.yaml
@@ -1,7 +1,7 @@
 replicas: 1
 
 image: 
-  repository: a1ex4/ownfoil
+  repository: fernandodimas/myfoil
   tag: latest
 
 service:
@@ -37,7 +37,7 @@ persistence:
 ingress:
   enabled: true
   tls: true
-  host: ownfoil.example.org
+  host: myfoil.example.org
   annotations:
     cert-manager.io/cluster-issuer: letsencrypt
     nginx.ingress.kubernetes.io/proxy-body-size: 15G
