--- a/app/static/manifest.json
+++ b/app/static/manifest.json
@@ -1,24 +1,21 @@
 {
-    "name": "MyFoil",
+    "name": "MyFoil Library Manager",
     "short_name": "MyFoil",
-    "description": "Nintendo Switch Library Manager",
+    "description": "Nintendo Switch Library Manager & Shop Server",
     "start_url": "/",
     "display": "standalone",
-    "background_color": "#0f172a",
-    "theme_color": "#7c3aed",
-    "orientation": "any",
+    "background_color": "#1a1a1a",
+    "theme_color": "#570df8",
     "icons": [
         {
             "src": "/static/img/icon-192.png",
             "sizes": "192x192",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "type": "image/png"
         },
         {
             "src": "/static/img/icon-512.png",
             "sizes": "512x512",
-            "type": "image/png",
-            "purpose": "any maskable"
+            "type": "image/png"
         }
     ]
 }
