--- a/requirements.txt
+++ b/requirements.txt
@@ -18,3 +18,8 @@ structlog
 prometheus-client
 flask-socketio
 eventlet
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+dropbox
