--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -52,7 +52,7 @@ jobs:
       - name: Verify imports
         working-directory: ./app
         run: |
-          python -c "from titledb import check_titledb_updates; print('titledb.py OK')"
+          python -c "from titledb import update_titledb_files; print('titledb.py OK')"
           python -c "from library import ALLOWED_EXTENSIONS; print('library.py OK')"
           python -c "from exceptions import MyFoilException; print('exceptions.py OK')"
           python -c "from jobs import update_titledb_job; print('jobs.py OK')"
