--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -55,7 +55,7 @@ jobs:
           python -c "from titledb import update_titledb_files; print('titledb.py OK')"
           python -c "from library import ALLOWED_EXTENSIONS; print('library.py OK')"
           python -c "from exceptions import MyFoilException; print('exceptions.py OK')"
-          python -c "from jobs import update_titledb_job; print('jobs.py OK')"
+          python -c "from jobs.jobs import update_titledb_job; print('jobs.py OK')"
 
       - name: Run pytest
         working-directory: ./app
