ci: fix imports by adding app to sys.path

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,13 +51,33 @@ jobs:
 
       - name: Verify imports
         run: |
-          PYTHONPATH=. python -c "from app.titledb import update_titledb_files; print('titledb.py OK')"
-          PYTHONPATH=. python -c "from app.library import ALLOWED_EXTENSIONS; print('library.py OK')"
-          PYTHONPATH=. python -c "from app.exceptions import MyFoilException; print('exceptions.py OK')"
-          PYTHONPATH=. python -c "from app.jobs import update_titledb_job; print('jobs.py OK')"
+          python -c "
+            import sys
+            sys.path.insert(0, 'app')
+            from titledb import update_titledb_files
+            print('titledb.py OK')
+          "
+          python -c "
+            import sys
+            sys.path.insert(0, 'app')
+            from library import ALLOWED_EXTENSIONS
+            print('library.py OK')
+          "
+          python -c "
+            import sys
+            sys.path.insert(0, 'app')
+            from exceptions import MyFoilException
+            print('exceptions.py OK')
+          "
+          python -c "
+            import sys
+            sys.path.insert(0, 'app')
+            from jobs import update_titledb_job
+            print('jobs.py OK')
+          "
 
       - name: Run pytest
-        run: PYTHONPATH=. pytest app/tests/ -v --tb=short
+        run: pytest app/tests/ -v --tb=short
 
   build:
     runs-on: ubuntu-latest
