--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -51,10 +51,10 @@ jobs:
 
       - name: Verify imports
         run: |
-          python -c "import sys; sys.path.insert(0, 'app'); from titledb import update_titledb_files; print('titledb.py OK')"
-          python -c "import sys; sys.path.insert(0, 'app'); from library import ALLOWED_EXTENSIONS; print('library.py OK')"
-          python -c "import sys; sys.path.insert(0, 'app'); from exceptions import MyFoilException; print('exceptions.py OK')"
-          python -c "import sys; sys.path.insert(0, 'app'); from jobs.jobs import update_titledb_job; print('jobs.py OK')"
+          python -c "from titledb import update_titledb_files; print('titledb.py OK')"
+          python -c "from library import ALLOWED_EXTENSIONS; print('library.py OK')"
+          python -c "from exceptions import MyFoilException; print('exceptions.py OK')"
+          python -c "import jobs; update_titledb_job = jobs.update_titledb_job; print('jobs.py OK')"
 
       - name: Run pytest
         run: pytest app/tests/ -v --tb=short
