Migrate from eventlet to gevent, improve Redis logging, and fix grid zoom slider functionality

--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,8 @@ flask-restx
 structlog
 prometheus-client
 flask-socketio
-eventlet
+gevent
+gevent-websocket
 google-auth
 google-auth-oauthlib
 google-auth-httplib2
