fix: resolve docker-compose.dev.yml permission error
- Copy run.sh to app/ directory so it's included when mounting ./app:/app
- Remove redundant run.sh volume mount that was causing directory conflict
- Add helpful comment about updating games path

This fixes: 'exec: /app/run.sh: is a directory: permission denied'

--- a/docker-compose.dev.yml
+++ b/docker-compose.dev.yml
@@ -24,8 +24,7 @@ services:
     volumes:
       # DEVELOPMENT MODE: Mount source code for live reload
       - ./app:/app
-      - ./docker/run.sh:/app/run.sh
-      # Data volumes
+      # Data volumes (UPDATE THIS PATH to your actual games directory)
       - /path/to/your/games:/games
       - ./config:/app/config
       - ./data:/app/data
