feat: add Portainer-specific deployment guide and update docker-compose
- Created comprehensive DEPLOY_GUIDE.md with Portainer UI instructions
- Updated timezone to America/Sao_Paulo (Brazil)
- Added path update reminders in docker-compose.yml
- Included troubleshooting section for Portainer-specific issues

This guide helps users rebuild Docker images via Portainer to fix
the 'run.sh is a directory' error caused by cached layers.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -24,10 +24,10 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=UTC
+      - TZ=America/Sao_Paulo
       - REDIS_URL=redis://redis:6379/0
     volumes:
-      - /path/to/your/games:/games
+      - /path/to/your/games:/games  # ⚠️ UPDATE THIS PATH!
       - ./config:/app/config
       - ./data:/app/data
     ports:
@@ -54,9 +54,9 @@ services:
     environment:
       - PUID=1000
       - PGID=1000
-      - TZ=UTC
+      - TZ=America/Sao_Paulo
       - REDIS_URL=redis://redis:6379/0
     volumes:
-      - /path/to/your/games:/games
+      - /path/to/your/games:/games  # ⚠️ UPDATE THIS PATH!
       - ./config:/app/config
       - ./data:/app/data
