feat: implement timestamp-based rebuild strategy for Portainer
Changes:
- Add BUILD_DATE build arg with timestamp to force rebuilds
- Use versioned image tags (myfoil-local:YYYYMMDD_HHMM) instead of :latest
- Update DEPLOY_GUIDE.md with new timestamp update workflow
- This ensures Portainer detects changes and rebuilds the image

How it works:
1. User updates BUILD_DATE timestamp in docker-compose.yml
2. Portainer detects the change
3. Builds new image with new tag
4. Deploys fresh containers with updated code

This solves the 'run.sh is a directory' error by ensuring
the Docker image is always rebuilt with latest code changes.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,7 +16,11 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: myfoil-local:latest
+      args:
+        - BUILDKIT_INLINE_CACHE=1
+        # Force rebuild by changing this timestamp when deploying
+        - BUILD_DATE=20260122_1644
+    image: myfoil-local:20260122_1644
     restart: unless-stopped
     depends_on:
       redis:
@@ -43,7 +47,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    image: myfoil-local:latest
+      args:
+        - BUILDKIT_INLINE_CACHE=1
+        - BUILD_DATE=20260122_1644
+    image: myfoil-local:20260122_1644
     restart: unless-stopped
     command: celery -A celery_app.celery worker --loglevel=info --concurrency=2
     depends_on:
