fix: simplify docker-compose for Portainer Git deployment
Changes:
- Remove image tags (let Portainer auto-generate)
- Remove BUILD_DATE args (not needed for Git workflow)
- Simplify build configuration
- Add PORTAINER_GIT_DEPLOY.md with correct workflow

This is the correct setup for Portainer with Git repository:
- Portainer clones from GitHub
- Builds image on server automatically
- No need for pre-built images or manual tags

Workflow:
1. git push (local)
2. Update stack in Portainer (pulls latest code)
3. Portainer rebuilds and redeploys

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -16,11 +16,10 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        - BUILDKIT_INLINE_CACHE=1
-        # Force rebuild by changing this timestamp when deploying
-        - BUILD_DATE=20260122_1644
-    image: myfoil-local:20260122_1644
+      # No cache to ensure fresh build every time
+      cache_from:
+        - myfoil:latest
+    # Don't specify image name - let Portainer auto-generate
     restart: unless-stopped
     depends_on:
       redis:
@@ -47,10 +46,8 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-      args:
-        - BUILDKIT_INLINE_CACHE=1
-        - BUILD_DATE=20260122_1644
-    image: myfoil-local:20260122_1644
+      cache_from:
+        - myfoil:latest
     restart: unless-stopped
     command: celery -A celery_app.celery worker --loglevel=info --concurrency=2
     depends_on:
