Fase 1: Estabilização - Python 3.11, ruff fix, cleanup
Mudanças principais:
- Sincronizar versão Python para 3.11 (pyproject.toml, ci.yml)
- Corrigir 46 erros com ruff --fix (imports, variáveis não usadas)
- Remover scripts de debug (4 arquivos)
- Atualizar .gitignore (cache Python, DB files, scripts)
- Limpar cache Python (52 arquivos .pyc/__pycache__)

Estatísticas:
- Erros ruff: 104 → 63 (-39%)
- Variáveis não usadas: 16 → 0 (-100%)
- Imports não usados: 26 → 7 (-73%)

Arquivo: FASE1_ESTABILIZACAO.md (detalhes completos)

--- a/.gitignore
+++ b/.gitignore
@@ -2,6 +2,11 @@ __pycache__
 config
 data
 
+# Python cache
+*.pyc
+*.py[cod]
+*$py.class
+
 # venv
 /bin
 /venv
@@ -15,5 +20,19 @@ data
 # pyenv
 .python-version*.db
 app/config/*.db
+*.db
+*.sqlite
+*.sqlite3
+
+# TitleDB JSON
 titles.json
 titles.BR.pt.json
+
+# Development scripts
+reproduce_issue.py
+check_db.py
+debug_watcher.py
+get_library_path.py
+
+# Grep output
+grep_results.txt
