--- a/requirements.txt
+++ b/requirements.txt
@@ -17,7 +17,9 @@ redis
 flask-restx
 structlog
 prometheus-client
-flask-socketio
+flask-socketio>=5.3.6
+python-socketio>=5.10.0
+python-engineio>=4.8.0
 gevent
 gevent-websocket
 google-auth
