--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -54,7 +54,7 @@ jobs:
           cd app && python -c "from titledb import update_titledb_files; print('titledb.py OK')" && \
           python -c "from library import ALLOWED_EXTENSIONS; print('library.py OK')" && \
           python -c "from exceptions import MyFoilException; print('exceptions.py OK')" && \
-          python -c "import jobs; update_titledb_job = jobs.update_titledb_job; print('jobs.py OK')"
+          python -c "from file_watcher import Watcher; print('file_watcher.py OK')"
 
       - name: Run pytest
         run: pytest tests/ -v --tb=short
