--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,21 +11,21 @@ services:
       POSTGRES_DB: myfoil
     volumes:
       - postgres_data:/var/lib/postgresql/data
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U myfoil"]
       interval: 10s
       timeout: 5s
       retries: 5
+    ports:
+      - "5432:5432"
 
   redis:
     image: redis:7-alpine
     container_name: myfoil-redis
     restart: unless-stopped
-    healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
       interval: 10s
       timeout: 5s
       retries: 5
+    ports:
+      - "6379:6379"
 
   myfoil:
     container_name: myfoil
