Fix worker stability and identification error handling
- Use gevent pool for worker to prevent deadlocks\n- Clear identification errors when fallback succeeds\n- Update healthcheck settings for better reliability\n- Add task start logging

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -14,10 +14,11 @@ services:
 
   worker:
     healthcheck:
-      test: ["CMD-SHELL", "celery -A celery_app.celery inspect ping"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
+      test: [ "CMD-SHELL", "celery -A celery_app.celery inspect ping" ]
+      interval: 60s
+      timeout: 20s
+      retries: 5
+      start_period: 30s
 
     container_name: myfoil-worker
     build:
@@ -26,7 +27,8 @@ services:
       cache_from:
         - myfoil:latest
     restart: unless-stopped
-    command: celery -A celery_app.celery worker --loglevel=info --concurrency=2
+    # Use gevent pool since we are monkeypatching everything
+    command: celery -A celery_app.celery worker --loglevel=info --concurrency=20 -P gevent
     depends_on:
       redis:
         condition: service_healthy
@@ -38,9 +40,10 @@ services:
       - PUID=1000
       - PGID=1000
       - TZ=America/Sao_Paulo
+      - CELERY_REQUIRED=true
     volumes:
-      - /path/to/your/games:/games # Same as myfoil service
-      - /path/to/your/externo:/externo # Same as myfoil service
+      - /path/to/your/games:/games
+      - /path/to/your/externo:/externo
       - ./config:/app/config
       - ./data:/app/data
 
