--- a/docker-compose.ghcr.yml
+++ b/docker-compose.ghcr.yml
@@ -6,14 +6,14 @@ services:
     container_name: myfoil-redis
     restart: unless-stopped
     healthcheck:
-      test: ["CMD", "redis-cli", "ping"]
+      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
 
   myfoil:
     container_name: myfoil
-    image: ghcr.io/fernandodimas/myfoil:latest
+    image: ghcr.io/fernandodimas/myfoil:${MYFOIL_VERSION:-2.1.3}
     restart: unless-stopped
     depends_on:
       redis:
@@ -24,20 +24,20 @@ services:
       - TZ=America/Sao_Paulo
       - REDIS_URL=redis://redis:6379/0
     volumes:
-      - /path/to/your/games:/games  # ⚠️ UPDATE THIS PATH!
+      - /path/to/your/games:/games # ⚠️ UPDATE THIS PATH!
       - ./config:/app/config
       - ./data:/app/data
     ports:
       - "8465:8465"
     healthcheck:
-      test: ["CMD", "curl", "-f", "http://localhost:8465/"]
+      test: [ "CMD", "curl", "-f", "http://localhost:8465/" ]
       interval: 30s
       timeout: 10s
       retries: 3
 
   worker:
     container_name: myfoil-worker
-    image: ghcr.io/fernandodimas/myfoil:latest
+    image: ghcr.io/fernandodimas/myfoil:${MYFOIL_VERSION:-2.1.3}
     restart: unless-stopped
     command: celery -A celery_app.celery worker --loglevel=info --concurrency=2
     depends_on:
@@ -51,6 +51,6 @@ services:
       - TZ=America/Sao_Paulo
       - REDIS_URL=redis://redis:6379/0
     volumes:
-      - /path/to/your/games:/games  # ⚠️ UPDATE THIS PATH!
+      - /path/to/your/games:/games # ⚠️ UPDATE THIS PATH!
       - ./config:/app/config
       - ./data:/app/data
