--- a/.github/workflows/build-and-push-image.yml
+++ b/.github/workflows/build-and-push-image.yml
@@ -28,5 +28,5 @@ jobs:
           platforms: linux/amd64
           push: true
           tags: |
-            ghcr.io/${{ toLower(github.repository) }}/myfoil:${{ github.sha }}
-            ghcr.io/${{ toLower(github.repository) }}/myfoil:latest
+            ghcr.io/${{ github.repository_owner }}/myfoil:${{ github.sha }}
+            ghcr.io/${{ github.repository_owner }}/myfoil:latest
