Add RUN_POST_DEPLOY_RECOMPUTE=1 to myfoil service in docker-compose.ghcr.yml

--- a/docker-compose.ghcr.yml
+++ b/docker-compose.ghcr.yml
@@ -23,6 +23,7 @@ services:
       - PGID=1000
       - TZ=America/Sao_Paulo
       - REDIS_URL=redis://redis:6379/0
+      - RUN_POST_DEPLOY_RECOMPUTE=1
     volumes:
       - /path/to/your/games:/games # ⚠️ UPDATE THIS PATH!
       - ./config:/app/config
