fix(ui,tests): fix wishlist layout, translations, upcoming modal, and test imports
- Fix wishlist table layout (cramped/broken) and standard icons
- Redesign upcoming games modal to large format with close button
- Resolve ModuleNotFoundError in pytest and clean up sys.path hacks
- Add missing translations for wishlist headers and status messages
- Robust parsing of TitleDB search results (unwrap nested data)
- Standardize ErrorCode with INVALID_PARAMS

--- a/pytest.ini
+++ b/pytest.ini
@@ -1,9 +1,7 @@
 [pytest]
 testpaths = tests
 python_files = test_*.py
-python_classes = Test*
-python_functions = test_*
-pythonpath = app
+pythonpath = . app
 addopts = -v --tb=short
 filterwarnings =
     ignore::DeprecationWarning
